03/12/2003 - 1.x.x - WIP
	- Add new API function attrib.[hc]:ntfs_attr_map_whole_runlist().
	- Add new API function runlist.[hc]:ntfs_rl_pread().

19/11/2003 - 1.8.0 - Final fixes and tidy ups.
	- Cleanup build system wrt CFLAGS handling placing it all in one place
	  in configure.ac and removing everything related from the Makefile.am
	  files.
	- Fix all compiler warnings (Richard Russon, me)
	- Make libntfs more portable by removing the dependency on
	  asm/byteorder.h and using <endian.h> and <byteswap.h> instead. Also
	  adapting our endians.h appropriately. (Richard Russon)
	- Fix nasty buffer overflow bug in ntfs_get_attribute_value() which we
	  use to get the attribute list attribute.  This is the same bug that
	  was biting us in the ntfs driver 2.1.4 and was fixed in 2.1.5.
	  Windows XP creates files where an attribute's data size is more than
	  one run list run shorter than the allocated size which causes us to
	  crash out as we assumed this would never happen.
	- Various other small cleanups and fixes.

10/11/2003 - 1.8.0beta2 - More features!
	- Merge ntfsprogs-gnomevfs written by Jan Kratochvil.

23/10/2003 - 1.8.0beta - The Long Overdue(TM) release.
	- Further work on attribute resizing.
	- Fix two logic inversion bugs in dir.c. Thanks to Russ Christensen for
	  finding the first one.
	- Fix attempt to release I30 internal constant. (Russ Christensen)
	- Fix off-by-one error in disk_io.c::ntfs_cluster_{read,write}(). (Ian
	  Jackson)
	- Add -fms-extensions when compiling with gcc-3.2+.
	- Update for newer autoconf/automake.
	- Abstract low level device operations (include/device,h and
	  libntfs/device.c) and adapt utilities to changes.
	- Added ntfsclone utility written by Szabolcs Szakacsits.
	- Added ntfsls utility written by Lode Leroy.
	- Fix bugs in dir.c::ntfs_readdir() where we try to close ia_na when
	  it is NULL.
	- Return errno ENOTDIR from dir.c::ntfs_readdir() when called with a
	  file inode.