@@ -1,6 +1,8 @@
 03/12/2003 - 1.x.x - WIP
 	- Add new API function attrib.[hc]:ntfs_attr_map_whole_runlist().
 	- Add new API function runlist.[hc]:ntfs_rl_pread().
+	- Fix bug in run list encoding functions that hit sparse and compressed
+	  files with holes. (Szabolcs Szakacsits)
 
 19/11/2003 - 1.8.0 - Final fixes and tidy ups.
 	- Cleanup build system wrt CFLAGS handling placing it all in one place
